integrate mybooking front-end changes

--- a/views/_rent_search_form_full_v2.erb
+++ b/views/_rent_search_form_full_v2.erb
@@ -70,6 +70,19 @@
                       </div>
                     </div>
 
+                    <div class="row row-inputs">
+                      <div class="container-fluid">
+                        <div class="col-sm-6">
+                          <div class="checkbox checkbox-danger">
+                             <input name="driver_under_age" id="driver_under_age" type="checkbox" class="extra-checkbox" data-value="on"/>
+                             <label for="driver_under_age">
+                              <%=t.front_end_reservation.driver_under_age%>
+                             </label>
+                          </div>                          
+                        </div>  
+                      </div>  
+                    </div>
+
                     <div class="row row-submit">
                       <div class="container-fluid">
                         <div class="inner">
